@@ -48,6 +48,7 @@
             JIT: cope with returning nested arrays/objects/etc by checking if upper registers are in use or not
             JIT: Add peephole optimisations for push/pop (#2691)
             JIT: Remove 'jit' object from RAM (store in stack only when needed) - fix #2664
+            Bangle.js2: Ensure Factory Reset deletes stored pairing data
 
      2v28 : Add `E.internal` as a way to access the 'hidden root' containing Espruino internal variables that previously needed `global["\xff"]`
             Bangle.js: Fix back handler not removed when using E.setUI with a back button but without widgets (#2636)
